[tool.poetry]
name = "breast-cancer-predictor"
version = "0.1.0"
description = ""
authors = ["David Botero <davids.boteron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
